# luciano-gear-academy

contracts/: Cargo.toml
contracts/01-tamagotchi/io/src/: lib.rs
contracts/01-tamagotchi/src/: lib.rs
contracts/01-tamagotchi/tests/: smoke.rs
contracts/02-tamagotchi-interaction/io/src/: lib.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/03-tamagotchi-nft/tests/: owning.rs
contracts/04-tamagotchi-shop/io/: Cargo.toml
contracts/04-tamagotchi-shop/io/src/: lib.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/05-tamagotchi-auto/io/src/: lib.rs
contracts/05-tamagotchi-auto/src/: lib.rs
contracts/06-tamagotchi-army/: Cargo.toml
contracts/06-tamagotchi-army/io/: Cargo.toml
contracts/06-tamagotchi-army/io/src/: lib.rs
contracts/06-tamagotchi-army/src/: lib.rs
contracts/06-tamagotchi-army/tamagotchi-utils/io/src/: lib.rs
contracts/06-tamagotchi-army/tamagotchi-utils/src/: lib.rs
contracts/06-tamagotchi-army/tests/: tests.rs
contracts/07-tamagotchi-battle/: Cargo.toml  README.md  build.rs
contracts/07-tamagotchi-battle/io/: Cargo.toml
contracts/07-tamagotchi-battle/io/src/: lib.rs
contracts/07-tamagotchi-battle/src/: lib.rs
contracts/07-tamagotchi-battle/state/: Cargo.toml
contracts/07-tamagotchi-battle/tests/: tamagotchi-battle.rs
contracts/escrow/: Cargo.toml  build.rs
contracts/escrow-factory/: Cargo.toml  build.rs
contracts/escrow-factory/io/: Cargo.toml
contracts/escrow-factory/io/src/: lib.rs
contracts/escrow-factory/src/: lib.rs
contracts/escrow-factory/target_/: escrow.opt.wasm
contracts/escrow-factory/tests/: escrow_factory.rs
contracts/escrow/io/: Cargo.toml
contracts/escrow/io/src/: lib.rs
contracts/escrow/src/: contract.rs
contracts/escrow/state/: Cargo.toml
contracts/escrow/state/src/: lib.rs
contracts/escrow/tests/: escrow.rs
contracts/tamagotchi-utils/: Cargo.toml  build.rs
contracts/tamagotchi-utils/io/: Cargo.toml
contracts/tamagotchi-utils/io/src/: lib.rs
contracts/tamagotchi-utils/src/: lib.rs
