[package]
name = "tamagotchi-battle"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
tamagotchi-battle-io.workspace = true
tamagotchi-utils-io.workspace = true
store-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-battle-io.workspace = true
tamagotchi-utils-io.workspace = true

[dev-dependencies]
gclient.workspace = true
tokio.workspace = true

