[package]
name = "escrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
escrow-io.workspace = true
gmeta.workspace = true

[dev-dependencies]
# escrow-state = { workspace = true, features = ["binary-vendor"] }
gclient.workspace = true
gtest.workspace = true
tokio.workspace = true

[build-dependencies]
escrow-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true
