[package]
name = "tamagotchi-utils"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-utils-io.workspace = true
sharded-fungible-token-io.workspace = true
store-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-utils-io.workspace = true
sharded-fungible-token-io.workspace = true
store-io.workspace = true
